[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kindle-unpack"
authors = [
    {name = "kevinhendricks", email = "kevinhendricks@github.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
keywords = []
classifiers = []
version="0.83"

[tool.setuptools.packages.find]
where = ["src"]

## ----------------------------------------------------------------------------

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
recursive = true
ignore-init-module-imports = true
exclude = "venv"

[tool.isort]
profile = "black"
py_version=312
line_length = 140


[tool.black]
line-length = 140
target-version = ['py312']
include='\.pyi?$'
preview=true
enable-unstable-feature=['hug_parens_with_braces_and_square_brackets']
